--- a/scripts/azure-run-tests.yml
+++ b/scripts/azure-run-tests.yml
@@ -17,7 +17,7 @@ steps:
 
 - script: |
     cd packages/pkg-tests
-    yarn jest yarn --detectOpenHandles --reporters=default --reporters=jest-junit
+    yarn jest yarn --detectOpenHandles --maxWorkers=3 --reporters=default --reporters=jest-junit
   displayName: 'Run the acceptance tests'
 
 - task: PublishTestResults@2
