--- a/scripts/azure-run-tests.yml
+++ b/scripts/azure-run-tests.yml
@@ -14,6 +14,7 @@ steps:
   displayName: 'Build'
 
 - script: |
+    cd packages/pkg-tests
     yarn pkg-tests
   displayName: 'Run the acceptance tests'
 
