--- a/scripts/azure-run-tests.yml
+++ b/scripts/azure-run-tests.yml
@@ -15,7 +15,7 @@ steps:
 
 - script: |
     cd packages/pkg-tests
-    yarn pkg-tests
+    yarn run pkg-tests
   displayName: 'Run the acceptance tests'
 
 - task: PublishTestResults@2
